[package]
name = "node"
version = "0.1.0"
authors = ["equilibrium"]
description = "Example node to run equilibrium-curve-amm pallet"
edition = "2018"
license = "Apache-2.0"
build = "build.rs"
repository = "https://github.com/equilibrium-eosdt/equilibrium-curve-amm"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24", features = ["wasmtime"] }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sc-executor = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24", features = ["wasmtime"] }
sc-service = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24", features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sc-keystore = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sp-inherents = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sc-transaction-pool = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sp-transaction-pool = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sc-consensus-aura = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sp-consensus-aura = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sp-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sc-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sc-finality-grandpa = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sp-finality-grandpa = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sc-client-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.1.0"
sc-rpc = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sp-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sc-rpc-api = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sp-blockchain = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sp-block-builder = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
sc-basic-authorship = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }

equilibrium-curve-amm-rpc = { version = "0.1.5", path = "../pallets/equilibrium-curve-amm/rpc"}

node-runtime = { version = "0.1.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.24" }

[features]
default = []
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
]
