[package]
name = "node"
version = "0.1.0"
authors = ["equilibrium"]
description = "Example node to run equilibrium-curve-amm pallet"
edition = "2018"
license = "Apache-2.0"
build = "build.rs"
repository = "https://github.com/equilibrium-eosdt/equilibrium-curve-amm"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sc-executor = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "master" }
sc-service = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "master" }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sc-consensus-aura = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-consensus-aura = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "master" }
sc-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "master" }
sc-finality-grandpa = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "master" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sc-rpc-api = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sc-basic-authorship = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate', branch = "master" }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = "master" }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = "master" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "master" }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = "master" }

equilibrium-curve-amm-rpc = { version = "0.1.5", path = "../pallets/equilibrium-curve-amm/rpc"}

node-runtime = { version = "0.1.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = 'https://github.com/paritytech/substrate', branch = "master" }

[features]
default = []
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
]
