[package]
authors = ["equilibrium"]
description = "Slightly modified version of substrate assets pallet"
name = "equilibrium-assets"
edition = "2018"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/equilibrium-eosdt/equilibrium-curve-amm"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0", optional = true }

[dependencies.sp-std]
default-features = false
version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

# Needed for various traits. In our case, `OnFinalize`.
[dependencies.sp-runtime]
default-features = false
version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

# Needed for type-safe access to storage DB.
[dependencies.frame-support]
default-features = false
version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
[dependencies.frame-system]
default-features = false
version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

[dev-dependencies]
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0" }

[dev-dependencies.sp-io]
default-features = false
version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

[dev-dependencies.pallet-balances]
default-features = false
version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
tag = "v3.0.0"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
