[package]
authors = ["equilibrium"]
description = "Substrate-based runtime version of Curve automated market maker."
edition = "2018"
name = "equilibrium-curve-amm"
version = "0.2.0"
license = "Apache-2.0"
repository = "https://github.com/equilibrium-eosdt/equilibrium-curve-amm"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
impl-trait-for-tuples = "0.1.3"

[dependencies.frame-support]
default-features = false
version = "3.0.0"
git = 'https://github.com/equilibrium-eosdt/substrate.git'
branch = "eq_prefix_68"

[dependencies.frame-system]
default-features = false
version = "3.0.0"
git = 'https://github.com/equilibrium-eosdt/substrate.git'
branch = "eq_prefix_68"

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/equilibrium-eosdt/substrate.git'
optional = true
package = "frame-benchmarking"
version = "3.0.0"
branch = "eq_prefix_68"

[dev-dependencies]
serde = { version = "1.0.101" }

[dev-dependencies.sp-core]
default-features = false
version = "3.0.0"
git = 'https://github.com/equilibrium-eosdt/substrate.git'
branch = "eq_prefix_68"

[dev-dependencies.sp-io]
default-features = false
version = "3.0.0"
git = 'https://github.com/equilibrium-eosdt/substrate.git'
branch = "eq_prefix_68"

[dependencies.sp-std]
default-features = false
version = "3.0.0"
git = 'https://github.com/equilibrium-eosdt/substrate.git'
branch = "eq_prefix_68"

[dependencies.sp-runtime]
default-features = false
version = "3.0.0"
git = 'https://github.com/equilibrium-eosdt/substrate.git'
branch = "eq_prefix_68"

[dev-dependencies.pallet-balances]
default-features = false
version = "3.0.0"
git = 'https://github.com/equilibrium-eosdt/substrate.git'
branch = "eq_prefix_68"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
    "sp-std/std",
	"sp-runtime/std",
]

runtime-benchmarks = ["frame-benchmarking"]