[package]
authors = ["equilibrium"]
description = "Substrate-based runtime version of Curve automated market maker."
edition = "2018"
name = "equilibrium-curve-amm"
version = "0.2.1"
license = "Apache-2.0"
repository = "https://github.com/equilibrium-eosdt/equilibrium-curve-amm"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
impl-trait-for-tuples = "0.1.3"
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.24"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.24"

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true
package = "frame-benchmarking"
branch = "polkadot-v0.9.24"

[dev-dependencies]
serde = { version = "1.0.101" }

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.24"

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.24"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.24"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.24"

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.24"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
    "sp-std/std",
	"sp-runtime/std",
]

runtime-benchmarks = ["frame-benchmarking"]