[package]
name = "equilibrium-curve-amm-rpc"
version = "0.1.7"
authors = ["equilibrium"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/equilibrium-eosdt/equilibrium-curve-amm"
description = "RPC interface for the Substrate-based runtime version of Curve automated market maker."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-rpc = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = "master" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = "master" }
equilibrium-curve-amm-rpc-runtime-api = { version = "0.1.7", path = "./runtime-api" }
