[package]
name = "equilibrium-curve-amm-rpc"
version = "0.1.8"
authors = ["equilibrium"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/equilibrium-eosdt/equilibrium-curve-amm"
description = "RPC interface for the Substrate-based runtime version of Curve automated market maker."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
sp-core = { git = 'https://github.com/paritytech/polkadot-sdk', branch = "release-polkadot-v1.5.0" }
sp-rpc = { git = 'https://github.com/paritytech/polkadot-sdk', branch = "release-polkadot-v1.5.0" }
sp-runtime = { git = 'https://github.com/paritytech/polkadot-sdk', branch = "release-polkadot-v1.5.0" }
sp-api = { git = 'https://github.com/paritytech/polkadot-sdk', branch = "release-polkadot-v1.5.0" }
sp-blockchain = { git = 'https://github.com/paritytech/polkadot-sdk', branch = "release-polkadot-v1.5.0" }
equilibrium-curve-amm-rpc-runtime-api = { version = "0.1.7", path = "./runtime-api" }
